--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Converter</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Temp_Converter/style.css">
 </head>
 <body>
     <div id="main">
@@ -31,5 +31,5 @@
         </div>
     </div>
 </body>
-<script src="script.js"></script>
+<script src="Temp_Converter/script.js"></script>
 </html>
